Cosmetic fixes. Prevented list from overflowing via margin property, corrected find-user-block to find-user and changed tile search-result width from 90 to 100

--- a/frontend/src/Styles/App.css
+++ b/frontend/src/Styles/App.css
@@ -53,7 +53,9 @@ ul {
   width: 100%;
   height: 100%;
   list-style-type: none;  /* Removes bullet points */
-  padding-left: 0;         /* Removes the default padding */
+  padding: 0;         /* Removes the default padding */
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .links ul {
@@ -180,7 +182,7 @@ ul {
 }
 
 .tile.search-result {
-  width: 90%;
+  width: 100%;
   padding: 1%;
   height: 90%;
 }
